src/$scss$/Content.scss
@layer adl-content {

    //
    @mixin mobile-version {
        :where(.ui-content) {
            & { grid-template-columns: minmax(0px, 0rem) minmax(0px, 1fr); };
            .adl-toolbar { z-index: 98; };
            .adl-tab-box {
                & { grid-row: 1 / 2 span; };
                &:not(.adl-open) { translate: -100% 0px; box-shadow: 0rem 0rem 0rem #00000060; };
                &.adl-open { translate: 0px 0px; box-shadow: 0rem 0rem 1rem #00000060; };
            }
        }
    }

    //
    @mixin desktop-version {
        :where(.ui-content) {
            & { grid-template-columns: minmax(12rem, 0rem) minmax(0px, 1fr); };
            .adl-toolbar { z-index: 99; };
            .adl-tab-box { grid-row: 2 / 2 span; translate: 0px 0px; }
        }
    }

    //
    :where(.ui-content) {

        //
        & {
            display: inline grid;
            grid-template-columns: minmax(0px, 0rem) minmax(0px, 1fr);
            grid-template-rows: minmax(2.25rem, max-content) minmax(0px, 1fr);
            box-sizing: border-box;
            gap: 1px;
            font-size: 0.9rem;
        }

        //
        .adl-toolbar {
            & {
                grid-row: 1 / 1 span;
                grid-column: 1 / -1;
                inline-size: 100%;
                min-block-size: 100%;
                block-size: max-content;

                //
                padding: 0px;
                z-index: 98;
                display: flex;
                justify-content: start;
                flex-direction: row;
                flex-wrap: nowrap;
                gap: 0.25rem;
                padding-inline: 0.125rem;
            }

            //
            .adl-space {
                flex-grow: 1;
                flex-basis: stretch;
            }

            //
            button {
                aspect-ratio: 1 / 1;
                block-size: 100%;
                inline-size: max-content;
                min-block-size: 2rem;
                padding: 0.5rem;
                margin: 0px;
                border-radius: 0.25rem;
            }
        }

        //
        .adl-tab-box {
            //
            & {
                block-size: max-content;
                grid-column: 1 / 1 span;
                inline-size: max(100%, 12rem);
                padding: 0rem;
                z-index: 99;
                overflow: visible;
                justify-self: start;

                //
                min-block-size: 100%;
                transition: translate 0.2s;
            }

            //
            .adl-tabs {
                display: inline grid;
                grid-auto-rows: minmax(0px, max-content);
                grid-template-columns: minmax(2rem, max-content) minmax(0px, 1fr);
                block-size: max-content;
                inline-size: 100%;
                overflow: hidden;
            }

            //
            ui-select-row {
                block-size: 2.5rem;
                display: inline grid;
                grid-template-columns: subgrid;
            }

            //
            ui-icon {
                min-block-size: 2rem;
            }

            //
            &:has(.adl-tabs:empty) { display: none !important; visibility: hidden !important; pointer-events: none !important; :where(*) { display: none !important;  visibility: hidden !important; pointer-events: none !important; }; };
        }

        //
        .adl-content-box {
            & {
                grid-column: 2 / 2 span;
                grid-row: 2 / 2 span;
                block-size: 100%;
                inline-size: 100%;

                //
                place-content: center;
                place-items: center;
            }

            //
            .adl-content {

                & {
                    place-content: center;
                    place-items: center;
                    display: flex;
                    padding: 1rem;
                    inline-size: 100%;
                    block-size: max-content;
                    min-block-size: 100%;
                    flex-direction: column;
                    overflow: hidden;

                    //
                    justify-content: start;
                    justify-items: start;
                    align-content: start;
                    align-items: start;
                }

                //
                & ui-select-row {
                    & {
                        display: grid;
                        font-size: 0.8rem;
                        line-height: normal;
                        block-size: 2rem;
                        place-content: center;
                        place-items: center;
                        justify-content: start;
                        justify-items: start;
                        padding: 0.5rem;
                    }

                    //
                    ui-icon {
                        min-block-size: 1rem;
                    }
                }

                //
                form {
                    background-origin: border-box;
                    background-clip: border-box;
                    box-sizing: border-box;
                    inline-size: 100%;
                    block-size: max-content;
                    padding: 0.5rem;
                    padding-block-start: 1rem;
                    border-radius: 0.333rem;

                    display: flex;
                    flex-direction: column;
                    overflow: hidden;

                    gap: 0.5rem;
                }

                //
                .adl-form-label {
                    text-align: center;
                    opacity: 0.6;
                    font-size: 0.8rem;
                }
            }
        }

        // if there is no toolbar, just use same content space
        &:not(:has(.adl-tabs)), &:has(.adl-tabs:empty) {
            .adl-content-box { grid-column: 1 / 2 span; };
            .adl-tab-box { display: none !important; visibility: hidden !important; pointer-events: none !important; :where(*) { display: none !important; visibility: hidden !important; pointer-events: none !important; }; };
        }

        // if there is no toolbar, just use same content space
        &:not(:has(.adl-toolbar)), &:has(.adl-toolbar:empty) {
            .adl-content-box { grid-row: 1 / 2 span; };
            .adl-tab-box { grid-row: 1 / 2 span; };
            .adl-toolbar { display: none; };
        }
    }

    //
    @media not (((hover: hover) or (pointer: fine)) and ((width >= 9in) or (orientation: landscape))) {
        @include mobile-version;
    }

    //
    @media (((hover: hover) or (pointer: fine)) and ((width >= 9in) or (orientation: landscape))) {
        @include desktop-version;
    }

}

